# glwarp

./: .gitignore  CMakeLists.txt  README.md  _main.cpp  blue.txt  capture_example.cpp  main.cpp  mask.txt  mesh.txt  model.json  my_blue.txt  my_mask.txt  new_mesh.txt  new_screen_points.txt  new_texture_coords.txt  normalized_dome_plane_points.txt  red.txt  sample.tex  screen_points.txt  screen_points_3.txt  screen_to_dome.domemap  simple.frag  simple.vert  texture_coords.txt  texture_coords_3.txt
default/: default.mesh
inc/: file_io.h  input_parser.h  shader.h  texture.h
src/: file_io.cpp  input_parser.cpp  json11.cpp  shader.cpp  texture.cpp
